# android-cpp-hello-world

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/victorkrogh/helloworldc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  helloworld.cpp
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/victorkrogh/helloworldc/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
